--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,12 @@
       "name": "Lorna Mitchell",
       "email": "lorna.mitchell@vonage.com",
       "role": "Developer"
+    },
+    {
+      "name": "Chris Tankersley",
+      "email": "chris.tankersley@vonage.com",
+      "role": "Developer"
     }
-
   ],
   "support": {
     "email": "devrel@nexmo.com"
@@ -28,6 +32,6 @@
   "require": {
     "php": ">=7.1",
     "php-http/guzzle6-adapter": "^2.0",
-    "nexmo/client-core": "^1.0"
+    "nexmo/client-core": "^2.0"
   }
 }
