--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
   "require": {
     "php": ">=7.1",
     "php-http/guzzle6-adapter": "^2.0",
-    "nexmo/client-core": "^2.0"
+    "nexmo/client-core": "v2.2.0-RC1"
   }
 }
