--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "email": "devrel@nexmo.com"
   },
   "require": {
-    "php": ">=7.1",
-    "php-http/guzzle6-adapter": "^2.0",
+    "php": ">=7.2",
+    "guzzlehttp/guzzle": "^7.0",
     "vonage/client-core": "^2.0"
   }
 }
