--- a/composer.json
+++ b/composer.json
@@ -5,33 +5,17 @@
   "type": "library",
   "authors": [
     {
-      "name": "Tim Lytle",
-      "email": "tim@nexmo.com",
-      "role": "Developer",
-      "homepage": "http://twitter.com/tjlytle"
-    },
-    {
-      "name": "Michael Heap",
-      "email": "michael.heap@vonage.com",
-      "role": "Developer"
-    },
-    {
-      "name": "Lorna Mitchell",
-      "email": "lorna.mitchell@vonage.com",
-      "role": "Developer"
-    },
-    {
-      "name": "Chris Tankersley",
-      "email": "chris.tankersley@vonage.com",
-      "role": "Developer"
+      "name": "James Seconde",
+      "email": "jim.seconde@vonage.com",
+      "role": "PHP Developer Advocate"
     }
   ],
   "support": {
-    "email": "devrel@nexmo.com"
+    "email": "devrel@vonage.com"
   },
   "require": {
-    "php": ">=7.2",
+    "php": "~7.4 || ~8.0 || ~8.1",
     "guzzlehttp/guzzle": "^7.0",
-    "vonage/client-core": "^2.0"
+    "vonage/client-core": "^3.0"
   }
 }
