--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "email": "devrel@vonage.com"
   },
   "require": {
-    "php": "~8.1 || ~8.2 || ~8.3",
+    "php": "~8.1 || ~8.2 || ~8.3 || ~8.4",
     "guzzlehttp/guzzle": "^7.0",
     "vonage/client-core": "^4.0"
   }
